@@ -58,10 +58,23 @@ dependencies {
 	implementation 'software.amazon.awssdk:s3:2.25.46'
 	implementation 'software.amazon.awssdk:auth:2.25.46'
 	implementation 'software.amazon.awssdk:regions:2.25.46'
+
+	testImplementation 'com.h2database:h2'
+    // aop
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
+
+	// monitoring
+	implementation 'net.logstash.logback:logstash-logback-encoder:6.6'
+
+	// prometheus
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'io.micrometer:micrometer-registry-prometheus'
 }
 
 tasks.named('test') {
     useJUnitPlatform {
         excludeTags 'benchmark'
     }
+
+	jvmArgs '-XX:+EnableDynamicAgentLoading'
 }
